# AIdoingai

./: .gitmodules  README.md  requirements.txt  trip.py
AI따라하기_시리즈/: GitHub 작업을 간소화하는 'git-update' 명령어 설정하기.md  SSH단축키로 Ubuntu 서버접속을 한번에.md
CrewAI3_업무제휴이메일Agent/: 3강_jeong.ipynb
CrewAI5_여행스케줄Agent/.ipynb_checkpoints/: CrewAI_여행스케줄-checkpoint.ipynb
CrewAI6_여행스케줄Agent_update/: final_travel_plan.txt  reference_links.csv  travel-planner.py  travel_plan_chat.md  travel_plan_chat.txt
CrewAI_part/CrewAI2_나만의Agent만들기/: marketing_report.md
CrewAI_part/CrewAI3_업무제휴이메일Agent/: venue_details.json
CrewAI_part/CrewAI6_여행스케줄Agent_update/: drama-multi-agent-service_new.py  travel-planner.py
LangGraph_part/LangGraph3_pjt/langgraph_pdf_search/: graph_state.py  pyproject.toml
MimicAI_part/: GitHub 작업을 간소화하는 'git-update' 명령어 설정하기.md  SSH단축키로 Ubuntu 서버접속을 한번에.md
contentskit/: .gitignore  Dockerfile.n8n  README.md  docker-compose.yml  n8n-wordpress-workflow.json  sample.env  start-services.sh  stop-services.sh
gemini/: gemini지침_live에 넣으세요.md  gem지침_본문.md  gem지침_예제.md
llm_Basic_part/: promp_treeofthoughts.md  prompt_fewshot.md  prompt_react.md
llm_기본기시리즈/: prompt_basic.md  prompt_chainofthought.md
n8n_part/: TTS_potcast.json  Telegram_pipeline.json  Telegram_voice.json  Thumnail_workflow.json  docker-compose.yml  n8n_텔레그램봇 만들기_readme.md  script_body_workflow.json  telegram_multibot (1).json  vectordb_n8n.json  쇼츠메이커.json  옵시디안_회의록.json  카카오-n8n.md  카카오톡 메신저봇 설치.md  카카오톡 봇.json
n8n_시리즈/: .env  docker-compose.yml
obsidian/: YoutubeTemplate.md
(+496 files in other folders)
