[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_langsmith"
version = "0.0.6"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A package for easy integration with LangSmith"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "numpy",
    "pyyaml",
    "ipython",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/easy_langsmith"
"Bug Tracker" = "https://github.com/yourusername/easy_langsmith/issues"